# mail

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
formats/binary/: CMakeLists.txt  README.md
formats/binary/include/mail/formats/: binary.h
formats/binary/include/mail/formats/binary/: config.h  conversion.h  de.h  deserializer.h  ser.h  serializer.h
formats/binary/source/: config.cc  de.cc  deserializer.cc  ser.cc  serializer.cc
formats/json/: CMakeLists.txt
formats/json/include/mail/formats/: json.h
formats/json/include/mail/formats/json/: de.h  deserializer.h  ser.h  serializer.h  tokenizer.h
formats/json/include/rapidjson/: README.md
formats/json/source/: de.cc  deserializer.cc  ser.cc  serializer.cc  tokenizer.cc
formats/toml/: CMakeLists.txt
formats/toml/include/mail/formats/toml/: de.h  deserializer.h  ser.h
formats/toml/source/: de.cc  ser.cc
mail/: CMakeLists.txt
mail/include/mail/: de.h  ser.h  serialize.h  serialize_std.h  serializer.h
mail/include/mail/d/: deserialize.h  deserialize_std.h  deserializer.h
mail/include/mail/s/: serialize_std.h  serializer.h
mail/source/: primitive.cc
samples/: CMakeLists.txt  binary-test.cc  test-gen.cc  test.cc
tests/: CMakeLists.txt
tests/source/: binary_test.cc  data.h  json_test.cc  json_tokenizer.cc
